--- a/src/View/logIn.fxml
+++ b/src/View/logIn.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.DropShadow?>
@@ -9,13 +10,19 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
-<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.logInController">
    <children>
-      <AnchorPane prefHeight="500.0" prefWidth="500.0" style="-fx-background-color: #1a237e; -fx-background-radius: 30;">
+      <AnchorPane prefHeight="500.0" prefWidth="500.0" style="-fx-background-color: #1a237e;">
          <children>
             <Pane layoutX="163.0" layoutY="132.0" prefHeight="246.0" prefWidth="193.0" style="-fx-background-color: #283593; -fx-background-radius: 30;">
                <children>
+                  <Label alignment="CENTER" layoutX="69.0" layoutY="14.0" prefHeight="25.0" prefWidth="55.0" text="Login" textFill="#f6f8f6">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Label>
                   <TextField fx:id="idUser" alignment="CENTER" layoutX="24.0" layoutY="76.0" prefHeight="25.0" prefWidth="146.0" promptText="User" style="-fx-background-radius: 40; -fx-background-color: #3f51b5 #3f51b5;">
                      <effect>
                         <DropShadow />
